# Generated by Django 4.2.23 on 2026-06-04 22:27

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('pessoa', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Guarda',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('turma', models.IntegerField(blank=True, null=True)),
                ('tipo', models.CharField(blank=True, max_length=20, null=True)),
                ('ministerio', models.CharField(blank=True, max_length=50, null=True)),
                ('paroquia', models.CharField(blank=True, max_length=200, null=True)),
                ('matricula', models.CharField(max_length=20, unique=True)),
                ('tamanho_camisa', models.CharField(blank=True, max_length=10, null=True)),
                ('observacao', models.CharField(blank=True, max_length=200, null=True)),
                ('data_ingresso', models.DateField(blank=True, null=True)),
                ('is_ativo', models.BooleanField(default=True)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('atualizado_em', models.DateTimeField(auto_now=True)),
                ('pessoa', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='guarda', to='pessoa.pessoa')),
            ],
            options={
                'db_table': 'GUARDA',
            },
        ),
        migrations.CreateModel(
            name='StatusGuarda',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100)),
                ('is_temporario', models.BooleanField(default=False)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('atualizado_em', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'STATUS_GUARDA',
            },
        ),
        migrations.CreateModel(
            name='Sacramento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('batismo', models.BooleanField(default=False)),
                ('primeira_eucaristia', models.BooleanField(default=False)),
                ('crisma', models.BooleanField(default=False)),
                ('ordem', models.BooleanField(default=False)),
                ('data_batismo', models.DateField(blank=True, null=True)),
                ('data_primeira_eucaristia', models.DateField(blank=True, null=True)),
                ('data_crisma', models.DateField(blank=True, null=True)),
                ('guarda', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='sacramento', to='guarda.guarda')),
            ],
            options={
                'db_table': 'SACRAMENTO',
            },
        ),
        migrations.CreateModel(
            name='GuardaStatus',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('data_inicio', models.DateField(blank=True, null=True)),
                ('data_fim', models.DateField(blank=True, null=True)),
                ('motivo', models.CharField(blank=True, max_length=200, null=True)),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('guarda', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='status_historico', to='guarda.guarda')),
                ('status', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='guarda.statusguarda')),
            ],
            options={
                'db_table': 'GUARDA_STATUS',
            },
        ),
        migrations.CreateModel(
            name='ResponsavelGuarda',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('parentesco', models.CharField(blank=True, max_length=50, null=True)),
                ('guarda', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='responsaveis', to='guarda.guarda')),
                ('pessoa', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='pessoa.pessoa')),
            ],
            options={
                'db_table': 'RESPONSAVEL_GUARDA',
                'unique_together': {('guarda', 'pessoa')},
            },
        ),
        migrations.CreateModel(
            name='PadrinhoGuarda',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('guarda', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='padrinhos', to='guarda.guarda')),
                ('padrinho', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='afilhados', to='guarda.guarda')),
            ],
            options={
                'db_table': 'PADRINHO_GUARDA',
                'unique_together': {('guarda', 'padrinho')},
            },
        ),
    ]
